objects/BL_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>App_Access__c</fullName>
        <label>App Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_AccountType__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Free</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-As-You-Go</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLP_Applicable__c</fullName>
        <label>Applicable</label>
        <picklist>
            <picklistValues>
                <fullName>Event Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_AttendeeLimit__c</fullName>
        <label>AttendeeLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_BoothLimit__c</fullName>
        <label>BoothLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_DeviceLimit__c</fullName>
        <label>DeviceLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_DiscountPercentage__c</fullName>
        <label>DiscountPercentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLP_EventLimit__c</fullName>
        <label>EventLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Leads__c</fullName>
        <label>Leads</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_MobileAppAccess__c</fullName>
        <label>MobileAppAccess</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_PortalAccess__c</fullName>
        <label>PortalAccess</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_SignUp__c</fullName>
        <label>SignUp</label>
        <picklist>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Subscribed_Date__c</fullName>
        <label>Subscribed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_TotalDeviceLimit__c</fullName>
        <label>TotalDeviceLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_UserLimit__c</fullName>
        <label>UserLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PR_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PackageName__c</fullName>
        <label>PackageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BL_Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BLP_AccountType__c</columns>
        <columns>BLP_Amount__c</columns>
        <columns>BLP_EventLimit__c</columns>
        <columns>BLP_UserLimit__c</columns>
        <columns>BLP_AttendeeLimit__c</columns>
        <columns>BLP_SignUp__c</columns>
        <columns>App_Access__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BLP_{00000000}</displayFormat>
        <label>BLP_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BL_Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>